apps/music/airsonic-refix/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airsonic
  labels:
    app: airsonic
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: airsonic
  template:
    metadata:
      labels:
        app: airsonic
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: airsonic
          image: tamland/airsonic-refix:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
