apps/music/airsonic-refix/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: airsonic
spec:
  selector:
    app: airsonic
  sessionAffinity: ClientIP
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    name: http
    protocol: TCP
