apps/music/airsonic-refix/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airsonic
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: "sso-authelia@kubernetescrd"
spec:
  rules:
    - host: airsonic.bubylou.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airsonic
                port:
                  name: http
  tls:
    - hosts:
      - airsonic.bubylou.com
      secretName: airsonic-bubylou-tls
